# mac-cleanup

./: Cargo.toml  LICENSE  README.md
.github/homebrew/: mac-cleanup.rb
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/cleaner/: executor.rs  mod.rs  safety.rs
src/config/: exclude.rs  mod.rs
src/profiles/: builtin.rs  mod.rs  toml_format.rs  validate.rs
src/reporter/: json.rs  table.rs
src/rules/: app_caches.rs  dev_caches.rs  external.rs  mod.rs  project_artifacts.rs  system_junk.rs
src/scanner/: external.rs  glob_keep_latest.rs  known_path.rs  known_path_glob.rs  mod.rs  project_scan.rs  size.rs
src/tui/: clean_screen.rs  confirm_screen.rs  done_screen.rs  mod.rs  results_screen.rs  scan_screen.rs  theme.rs  widgets.rs
src/util/: mod.rs  path.rs  size.rs
