[package]
name = "mac-cleanup"
version = "0.2.3"
edition = "2024"
description = "macOS disk cleanup tool for developers"
license = "MIT"
repository = "https://github.com/Yurzs/mac-cleanup"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Filesystem
jwalk = "0.8"
walkdir = "2"

# Error handling
anyhow = "1"

# Terminal output (--no-tui mode)
colored = "3"

# Platform
dirs = "6"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"
